@@ -60,7 +60,7 @@ class BaseGui : public QMainWindow
     Q_OBJECT
     
 public:
-    BaseGui( QWidget* parent = 0, Qt::WindowFlags flags = 0 );
+    BaseGui( bool use_server, QWidget* parent = 0, Qt::WindowFlags flags = 0 );
 	~BaseGui();
 
 	/* Return true if the window shouldn't show on startup */
@@ -672,6 +672,7 @@ protected:
 	// Force settings from command line
 	int arg_close_on_finish; // -1 = not set, 1 = true, 0 = false
 	int arg_start_in_fullscreen; // -1 = not set, 1 = true, 0 = false
+	bool use_control_server;
 
 private:
 	QString default_style;
